@@ -1,5 +1,4 @@
 package com.example.BackEnd_MyTools.Mapper;
-
 import com.example.BackEnd_MyTools.Entitys.Product;
 import com.example.BackEnd_MyTools.DTO.DtoGetProduct;
 import org.mapstruct.*;
@@ -9,17 +8,23 @@ import java.util.stream.Collectors;
 @Mapper(componentModel = "spring")
 public interface ProductMapper {
 
-    @Mapping(target = "photoIds", expression = "java(mapPhotoUrls(product.getPhotoIds(), baseUrl))")
+    @Mapping(target = "photoUrls", ignore = true)
     DtoGetProduct toDto(Product product, @Context String baseUrl);
 
     List<DtoGetProduct> toDtoList(List<Product> products, @Context String baseUrl);
 
-    // Helper method to convert IDs to URLs
-    default List<String> mapPhotoUrls(List<String> photoIds, @Context String baseUrl) {
-        if (photoIds == null)
-            return null;
-        return photoIds.stream()
-                .map(id -> baseUrl + "/products/photos/" + id)
-                .collect(Collectors.toList());
+    @AfterMapping
+    default void mapPhotos(Product product,
+                           @MappingTarget DtoGetProduct dto,
+                           @Context String baseUrl) {
+
+        if (product.getPhotoUrls() != null) {
+            dto.setPhotoUrls(
+                product.getPhotoUrls()
+                    .stream()
+                    .map(id -> baseUrl + "/products/photos/" + id)
+                    .toList()
+            );
+        }
     }
 }
